[package]
name = "webrtc_vc"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.16", features = ["v3_24"] }
glib = "0.16"
webrtc = "0.7"
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.18"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.15"
ringbuf = "0.3"
futures-util = "0.3"
url = "2.3"